# skillc

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE-APACHE  LICENSE-MIT  README.md  deny.toml
.claude/commands/: discuss.md  gov.md  quick.md
.github/workflows/: ci.yml  mdbook.yml  pre-commit.yml  release.yml
docs/: .gitignore  INTRODUCTION.md  book.toml
docs/rfc/: RFC-0000.md  RFC-0001.md  RFC-0002.md  RFC-0003.md  RFC-0004.md  RFC-0005.md  RFC-0006.md  RFC-0007.md  RFC-0008.md  RFC-0009.md
docs/workflows/: analytics.md  authoring.md  publishing.md  testing.md  validating.md
gov/: config.toml  releases.toml
gov/adr/: ADR-0001-storage-layout.toml  ADR-0002-multi-target-build-output.toml  ADR-0003-mcp-as-primary-agent-interface.toml
gov/work/: 2026-01-25-write-rfc-0000-for-skillc-v0.toml  2026-01-25-write-rfc-0001-skill-compilation.toml  2026-01-26-implement-rfc-0001-skill-compilation.toml  2026-01-26-implement-rfc-0002-gateway-commands.toml  2026-01-26-implement-rfc-0003-usage-analytics.toml  2026-01-27-integration-test-framework-for-skillc.toml  2026-01-28-draft-rfc-0004-search-protocol.toml  2026-01-28-draft-rfc-0005-error-code-registry.toml  2026-01-29-add-integration-test-for-search.toml  (+45 more)
scripts/: build-book.sh
src/: analytics.rs  compiler.rs  config.rs  deploy.rs  error.rs  frontmatter.rs  gateway.rs  index.rs  init.rs  lib.rs  list.rs  logging.rs  main.rs  markdown.rs  mcp.rs  resolver.rs  search.rs  sync.rs  util.rs
src/lint/: mod.rs  (+5 more)
tests/: integration_build.rs  integration_gateway.rs  integration_init.rs  integration_lint.rs  integration_list.rs  integration_mcp.rs  integration_search.rs  integration_stats.rs  integration_sync.rs
(+98 files in other folders)
